// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots TextareaField Disabled 1`] = `
<div
  style={
    Object {
      "padding": "2rem",
    }
  }
>
  <div>
    <label
      className="TextareaField__Label-sc-16uni0c-3 ekHYWB"
    >
      <textarea
        className="TextareaField__Textarea-sc-16uni0c-2 feQeN"
        disabled={true}
        placeholder="Placeholder text"
        value="Value text"
      />
      <p
        className="TextareaField__LabelText-sc-16uni0c-0 ixGIyV"
        disabled={true}
      >
        Label text
      </p>
    </label>
    <small
      className="TextareaField__HelpText-sc-16uni0c-1 enucUr"
    >
      Help text
    </small>
  </div>
</div>
`;

exports[`Storyshots TextareaField Error 1`] = `
<div
  style={
    Object {
      "padding": "2rem",
    }
  }
>
  <div>
    <label
      className="TextareaField__Label-sc-16uni0c-3 ekHYWB"
    >
      <textarea
        className="TextareaField__Textarea-sc-16uni0c-2 feQeN error"
        disabled={false}
        placeholder="Placeholder text"
        value="Value text"
      />
      <p
        className="TextareaField__LabelText-sc-16uni0c-0 ixGIyV"
        disabled={false}
      >
        Label text
      </p>
    </label>
    <small
      className="TextareaField__HelpText-sc-16uni0c-1 enucUr error"
    >
      Help text
    </small>
  </div>
</div>
`;

exports[`Storyshots TextareaField Normal 1`] = `
<div
  style={
    Object {
      "padding": "2rem",
    }
  }
>
  <div>
    <label
      className="TextareaField__Label-sc-16uni0c-3 ekHYWB"
    >
      <textarea
        className="TextareaField__Textarea-sc-16uni0c-2 feQeN"
        disabled={false}
        placeholder="Placeholder text"
        value="Value text"
      />
      <p
        className="TextareaField__LabelText-sc-16uni0c-0 ixGIyV"
        disabled={false}
      >
        Label text
      </p>
    </label>
    <small
      className="TextareaField__HelpText-sc-16uni0c-1 enucUr"
    >
      Help text
    </small>
  </div>
</div>
`;
